cleanup ControlSequenceVisualizer